# caspianacademy

./: .gitmodules  README.md
Programming/mkv_asm_dsp/: .cproject  .project
Programming/mkv_asm_dsp/source/: dsp_cortex_m4.h  mkv_asm_dsp.c
Programming/mkv_asm_lib/: .cproject  .project
Programming/mkv_asm_lib/Debug/: makefile  sources.mk
Programming/mkv_asm_lib/Debug/source/: subdir.mk
Programming/mkv_asm_lib/source/: dsp_cortex_m4.h  dsp_cortex_m4.s
Programming/mkv_cmsis_dsp_m4/: .cproject  .project  README.md
Programming/mkv_cmsis_dsp_m4/source/: mkv_cmsis_dsp_m4.c
Programming/pico_event_callback/: CMakeLists.txt  README.md  event.c  event.h  main.c
Programming/state_machine/: README.md  main.c  state_machine.c  state_machine.h  state_machine.sln  state_machine.vcxproj  state_machine.vcxproj.filters
System/esp32_scheduling_upper_bound/: CMakeLists.txt  README.md  esp32_least_upper_bound.vgdbproj  esp32_scheduling_upper_bound.sln  sdkconfig
System/esp32_scheduling_upper_bound/main/: main.c
Technology/esp32_clion_skeleton/: CMakeLists.txt  README.md
Technology/esp32_clion_skeleton/components/component_1/: CMakeLists.txt  file_1.c  file_1.h
Technology/esp32_clion_skeleton/components/component_2/: CMakeLists.txt  file_2.c  file_2.h
Technology/esp32_clion_skeleton/main/: main.c
Technology/pic32mm_low_power.X/: README.md  main.c  pic32mm_low_power.mc3
Technology/pic32mm_low_power.X/mcc_generated_files/: adc1.c  adc1.h  clock.c  clock.h  mcc.h  onoff_led2.h  pin_manager.c  pin_manager.h  system.c  system.h  uart1.c
Technology/pic32mm_low_power.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  configurations.xml  project.xml
Technology/pic32mm_low_power.X/nbproject/private/: configurations.xml  private.xml
Technology/qt_cmake_skeleton/: CMakeLists.txt  README.md  main.cpp
Technology/qt_cmake_skeleton/module1_lib/: CMakeLists.txt  module1.cpp  module1.h
Technology/qt_cmake_skeleton/module2_lib/: CMakeLists.txt  module2.cpp  module2.h
Technology/qt_cmake_skeleton/unit_tests/: CMakeLists.txt  test_module1.cpp  test_module2.cpp
